[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/EnemySpawner.gd" type="Script" id=1]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnPoint" type="Node2D" parent="."]

[node name="Position2D3" type="Position2D" parent="SpawnPoint"]
position = Vector2( 0, 32 )

[node name="Position2D4" type="Position2D" parent="SpawnPoint"]
position = Vector2( 0, 48 )

[node name="Position2D5" type="Position2D" parent="SpawnPoint"]
position = Vector2( 0, 64 )

[node name="Position2D6" type="Position2D" parent="SpawnPoint"]
position = Vector2( 0, 80 )

[node name="Position2D7" type="Position2D" parent="SpawnPoint"]
position = Vector2( 0, 96 )

[node name="Position2D8" type="Position2D" parent="SpawnPoint"]
position = Vector2( 0, 112 )

[node name="Position2D9" type="Position2D" parent="SpawnPoint"]
position = Vector2( 0, 128 )

[node name="Position2D10" type="Position2D" parent="SpawnPoint"]
position = Vector2( 0, 144 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
